# ros2-realtime-object-detection

./: .gitignore  README.md  requirements.txt
my_vision_interfaces/: CMakeLists.txt  package.xml
my_vision_interfaces/msg/: Detection.msg  DetectionArray.msg
my_vision_node/: package.xml  setup.py
my_vision_node/my_vision_node/: object_detector.py
